certmanager-lab/manifests/app-response/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-response
spec:
  selector:
    app: app-response
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
