certmanager-lab/manifests/app-response/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-response
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: app-response.sredevops.com.br
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - app-response.sredevops.com.br
    secretName: app-response-tls
  rules:
  - host: app-response.sredevops.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-response
            port:
              number: 80
